# ushouse-fdr

./: .gitignore  README.md  disclosures.json  pyproject.toml
data/: fdr.db
data/2.fd_unzipped/2008/: 2008FD.txt
data/2.fd_unzipped/2009/: 2009FD.txt
data/2.fd_unzipped/2010/: 2010FD.txt
data/2.fd_unzipped/2011/: 2011FD.txt
data/2.fd_unzipped/2012/: 2012FD.txt
data/2.fd_unzipped/2013/: 2013FD.txt  2013FD.xml
data/2.fd_unzipped/2014/: 2014FD.txt  2014FD.xml
data/2.fd_unzipped/2015/: 2015FD.txt
data/2.fd_unzipped/2016/: 2016FD.txt
data/2.fd_unzipped/2017/: 2017FD.txt
data/2.fd_unzipped/2018/: 2018FD.txt
data/2.fd_unzipped/2019/: 2019FD.txt  2019FD.xml
data/2.fd_unzipped/2020/: 2020FD.txt  2020FD.xml
data/2.fd_unzipped/2021/: 2021FD.txt  2021FD.xml
data/2.fd_unzipped/2022/: 2022FD.txt  2022FD.xml
data/2.fd_unzipped/2023/: 2023FD.txt  2023FD.xml
data/2.fd_unzipped/2024/: 2024FD.txt  2024FD.xml
data/2.fd_unzipped/2025/: 2025FD.txt  2025FD.xml
src/ushouse_fdr/: 1.download_fd_zip_files.py  2.post_fd_to_db.py  2.post_to_db.py  3.search_pdf_reports.py  4.download_report_pdf_files.py  db.py
